# youtube-download

./: .gitattributes  .gitignore  .jshintrc  CHANGELOG-Project.md  CHANGELOG-Utils.md  CHANGELOG.md  CLAUDE.md  README-Dupes.md  README-Utils.md  README.md  artist_search.py  chapter_extractor_funcs.py  ertflix-auto.py  eslint.config.mjs  extract-ertflix-urls.js  find-artists-main.py  funcs_artist_search.py  funcs_audio_boost.py  funcs_audio_conversion.py  funcs_audio_tag_handlers.py  funcs_chapter_extraction.py  funcs_for_main_yt_dlp.py  funcs_process_audio_tags_common.py  funcs_process_audio_tags_unified.py  funcs_process_flac_tags.py  funcs_process_m4a_tags.py  funcs_process_mp3_tags.py  funcs_process_mp4_tags.py  funcs_slack_notify.py  funcs_url_extraction.py  funcs_utils.py  funcs_video_info.py  funcs_yt_dlp_download.py  get-artists-from-trello.py  get-chapters-main.py  logger_config.py  main-boost-mp3-or-mp4.py  main-convert.py  main-ertflix-series.py  main-extract-ertflix-urls.py  (+31 more)
.claude/: settings.local.json
.skylos/: baseline.json
Beta/: test-yt-dlp.py  yt_dlp_funcs.py
Data/: Nykhta Stasou Programs.txt  artists.json  trello - greek-music-artists.json
Docs/: Artists-file-from-trello-update-guide.md  CHANGELOG-old.md  CHANGELOG.md  Configuring mp3tag to display yt-dlp generated audio files.md  E2E-TESTING-GUIDE.md  E2E-TESTING-PLAN.md  ERTFLIX-SCRAPING-NOTES.md  How to update artists list after Trello board change.odt  LINTER-SCOPE-GUIDE.md  LINTER-WATCH-SCHEDULING.md  PLAYWRIGHT-CHROMIUM-UPDATE.md  URL-VALIDATION-SUMMARY.md  code-quality-recommendations.md  design-patterns-review.md  main-convert-README.md  plan-code-review.md
JS-files/: README.md  capture-working-play-click.js  extract-ertflix-urls.js
JS-files-diag/: README.md  extract-parea-urls-diagnostic.js  extract-parea-urls-v2.js  extract-parea-urls-v3.js  extract-parea-urls.js  extract-video-url-diagnostic.js  extract-video-url-shaka.js  obsolete-extract-parea-urls-v4.js
PowerShell Scripts/: yt-dlp-powershell.ps1
Tests/: E2E-FLOW-CHANGES.md  EMPTY-USE-CASE-VERIFICATION.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README-E2E-TESTS.md  check-mp3-encoding.py  clone-mp3-structure.py  clone-with-transliteration.py  conftest.py  create-sample-odt.py  dump-mp3-bytes.py  e2e_config.py  e2e_main.py  extract-ertflix-urls-debug.js  extract-ertflix-urls.js  extract-urls-from-console.md  find-artists-main.py  fix-mp3-encoding-aggressive.py  fix-mp3-encoding.py  get-chapters-main.py  last_url.txt  main-check-if-playlist.py  main-test-url-extraction.py  main_greek_search.py  manual-api-discovery.md  manual_test_notifications.py  parea-urls.txt  sample-urls.odt  scrape-with-selenium.py  setup-chromedriver-windows.py  test-domain-edge-cases.txt  test-main-url-validation.py  test-scrape-parea.py  test-url-validation.py  test_audio_tag_handlers.py  test_both_format.py  test_cases.py  test_chapter_regex.py  test_check_greek_singles.py  test_clean_song_title.py  (+29 more)
Tests-Standalone/: check-mp3-encoding.py  clone-mp3-structure.py  clone-with-transliteration.py  compare-mp3-files.py  create-sample-odt.py  dump-mp3-bytes.py  extract-ertflix-urls-debug.js  extract-urls-from-console.md  find-artists-main.py  fix-mp3-encoding-aggressive.py  fix-mp3-encoding.py  get-chapters-main.py  main-check-if-playlist.py  main-sanitize-file-names.py  main-test-url-extraction.py  main_greek_search.py  manual-api-discovery.md  probe-video-tags-vlc.py  sample-mixed-urls.txt  sample-urls.txt  scrape-with-selenium.py  setup-chromedriver-windows.py  test-domain-edge-cases.txt  test-main-url-validation.py  test-scrape-parea.py  test-url-validation.py  test_audio_tag_handlers.py  test_both_format.py  test_cases.py  test_chapter_display.py  test_chapter_regex.py  test_cleanup_leftover_files.py  test_cookie_args.py  test_csv_generation.py  test_gmail_auth.py  test_logging_suppression.py  test_m4a_tags.py  test_main_imports.py  test_mp4_tag_keys.py  test_original_filename_storage.py  (+9 more)
Utils/: fix_m4a_faststart.py  install-git-hooks.py  main-boost-audio-track.py  main-boost-mp3-or-mp4.py  main-check-dovi-profile5.py  main-check-greek-singles.py  main-convert.py  main-copy-audio-tags-to-video.py  main-get-artists-from-trello.py  main-inspect-dupe-groups.py  main-qb-notify-gmail.py  main-qb-notify-slack.py  main-qb-postdownload-gmail.py  main-qb-postdownload-slack.py  main-suggest-boost.py  main-verify-dupe-groups.py  qb-hook-gmail.sh  qb-hook-slack.sh
funcs_audio_processing/: __init__.py  common.py  flac.py  m4a.py  mp3.py  unified.py
funcs_audio_tag_handlers/: __init__.py  base.py  flac_handler.py  m4a_handler.py  mp3_handler.py
funcs_check_greek_singles/: __init__.py  audio_reader.py  config.py  database.py  file_actions.py  inspect_groups.py  models.py  normalize.py  report.py  state_tag.py  verify_groups.py
funcs_copy_tags_to_video/: __init__.py  audio_reader.py  pairing.py  tag_set.py  video_writer.py
funcs_ertflix_automation/: __init__.py  browser_session.py  cli_prompts.py  dom_scraper.py  episode_scraper.py  errors.py  handoff.py  player_scraper.py  season_scraper.py
funcs_for_audio_utils/: __init__.py  boost.py  conversion.py  loudness.py
funcs_for_main_yt_dlp/: __init__.py  _download_common.py  (+11 more)
(+42 files in other folders)
