[project]
name = "youtube-download"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arrow",
    "bandit",
    "deptry>=0.25.1",
    "emoji",
    "mutagen",
    "mypy",
    "odfpy",
    "pip-audit>=2.10.0",
    "pydoclint",
    "pylint",
    "pyupgrade",
    "radon",
    "ruff",
    "pytest>=9.0.3",
    "requests>=2.33.0",
    "ty>=0.0.33",
    "types-requests",
    "types-yt-dlp",
    "vulture",
    "yt-dlp",
    "playwright>=1.58.0",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "pygments>=2.20.0",
    "skylos>=4.11.0",
]

[tool.bandit]
exclude_dirs = ['.venv-linux', '.venv-3.14', '.venv-windows', '.venv', 'Tests/.venv-linux', 'Beta', 'Tests-Standalone', 'node_modules']
skips = ['B101', 'B404']

[tool.mypy]
exclude = ['Beta/', 'Tests/', 'Tests-Standalone/']

[tool.deptry]
exclude = ['\.venv', 'Beta', 'Tests-Standalone', 'Tests']

[tool.deptry.per_rule_ignores]
DEP002 = [
    "bandit", "deptry", "mypy", "pip-audit", "pydoclint", "pylint",
    "pyupgrade", "pygments", "radon", "ruff", "pytest", "skylos", "ty",
    "types-requests", "types-yt-dlp", "vulture",
]

[tool.pylint.basic]
module-naming-style = "any"

[tool.pylint.design]
max-args = 15
max-locals = 30
max-statements = 80
max-branches = 20
max-returns = 8
max-attributes = 12

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "W1203",  # logging-fstring-interpolation
    "E1101",  # no-member: false positives on dynamic library attrs (requests.codes)
    "R0801",  # duplicate-code: noisy for standalone scripts
    "W0718",  # broad-exception-caught: intentional at top-level error boundaries
    "R0917",  # too-many-positional-arguments: overlaps R0913, version-specific
]

[tool.pydoclint]
style = 'google'
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
allow-init-docstring = true
