[project]
name = "youtube-download"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arrow",
    "bandit",
    "deptry>=0.25.1",
    "emoji",
    "mutagen",
    "mypy",
    "odfpy",
    "Pillow",
    "pip-audit>=2.10.0",
    "pip-tools",
    "pydoclint",
    "pylint",
    "pyupgrade",
    "radon",
    "ruff",
    "pytest>=9.0.3",
    "requests>=2.33.0",
    "ty>=0.0.33",
    "types-requests",
    "types-yt-dlp",
    "vulture",
    "yt-dlp",
    "playwright>=1.58.0",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "pygments>=2.20.0",
    "skylos>=4.11.0",
]

[tool.bandit]
exclude_dirs = ['.venv-linux', 'Beta', 'Tests', 'Tests-Standalone', 'node_modules']
skips = ['B101', 'B404']

[tool.mypy]
exclude = ['Beta/', 'Tests/', 'Tests-Standalone/']
mypy_path = '../common-av-codebase'

[tool.ty.environment]
extra-paths = ['../common-av-codebase']

[tool.pyright]
venv = '.venv-av-linux'
venvPath = '..'
extraPaths = ['../common-av-codebase']

[tool.deptry]
exclude = ['\.venv', 'Beta', 'Tests-Standalone', 'Tests']

[tool.deptry.per_rule_ignores]
# common-av is a local editable sibling package (in requirements.in, not on PyPI
# and intentionally not in [project.dependencies]); deptry sees it installed in the
# venv via the editable, so its direct import reads as a transitive dep (DEP003).
# It ships two top-level packages: common_av and common_linters.
DEP003 = ["common_av", "common_linters"]
DEP002 = [
    "bandit", "deptry", "mypy", "pip-audit", "pip-tools", "pydoclint", "pylint",
    "pyupgrade", "pygments", "radon", "ruff", "pytest", "skylos", "ty",
    "types-requests", "types-yt-dlp", "vulture",
]

[tool.pylint.basic]
module-naming-style = "any"

[tool.pylint.design]
max-args = 15
max-locals = 30
max-statements = 80
max-branches = 20
max-returns = 8
max-attributes = 12

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "W1203",  # logging-fstring-interpolation
    "E1101",  # no-member: false positives on dynamic library attrs (requests.codes)
    "R0801",  # duplicate-code: noisy for standalone scripts
    "W0718",  # broad-exception-caught: intentional at top-level error boundaries
    "R0917",  # too-many-positional-arguments: overlaps R0913, version-specific
    "R0903",  # too-few-public-methods: intentional for single-purpose strategy/state classes
]

[tool.pydoclint]
style = 'google'
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
allow-init-docstring = true
